--- a/index.html
+++ b/index.html
@@ -16,73 +16,84 @@ body {
 
 .container {
   background: #fff;
-  width: 210mm;
-  margin: 0 auto;
-  padding: 20mm;
+  max-width: 900px;
+  margin: auto;
+  padding: 30px;
   border: 1px solid #ccc;
 }
 
 h2 {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .top-info {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 25px;
   font-weight: bold;
-  margin-bottom: 20px;
 }
 
 label {
   font-weight: bold;
-  margin-top: 14px;
   display: block;
+  margin-top: 18px;
 }
 
-input, select, textarea {
+input, select, textarea, canvas {
   width: 100%;
-  padding: 8px;
   margin-top: 6px;
 }
 
-textarea { min-height: 80px; }
+input, select, textarea {
+  padding: 10px;
+  font-size: 15px;
+}
+
+textarea {
+  min-height: 90px;
+}
 
 .row {
   display: flex;
   gap: 20px;
 }
 
-.row > div { flex: 1; }
-
-.checkbox-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 8px;
-}
-
-.checkbox-table td {
-  padding: 6px 0;
-}
-
-.checkbox-table td:last-child {
-  width: 30px;
-  text-align: right;
-}
-
-input[type="checkbox"] {
-  transform: scale(1.2);
+.row > div {
+  flex: 1;
 }
 
 canvas {
-  width: 100%;
-  height: 150px;
   border: 1px solid #000;
-  margin-top: 8px;
+  height: 150px;
+  background: #fff;
+}
+
+.checkbox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+  padding-bottom: 6px;
+  border-bottom: 1px dotted #ccc;
+}
+
+.checkbox span {
+  flex: 1;
+  padding-right: 15px;
+}
+
+.checkbox input {
+  width: 22px;
+  height: 22px;
+}
+
+.signature-block {
+  margin-top: 20px;
 }
 
 button {
-  margin-top: 20px;
+  margin-top: 30px;
   padding: 14px;
   width: 100%;
   font-size: 16px;
@@ -94,7 +105,6 @@ button {
 </head>
 
 <body>
-
 <div class="container" id="doc">
 
 <h2>Azonosító lap</h2>
@@ -105,32 +115,38 @@ button {
 </div>
 
 <label>Megbízó neve</label>
-<input id="gazdaNev">
+<input type="text" id="gazdaNev">
 
 <label>Cím</label>
-<input id="cim">
+<input type="text" id="cim">
 
 <label>Telefonszám</label>
-<input>
+<input type="tel">
 
 <label>Megbízott</label>
-<input value="Budai Tamás e.v. | Adószám: 69528279143 | Nyilvántartási szám: 53314194" readonly>
+<input type="text" readonly value="Budai Tamás e.v. | Adószám: 69528279-1-43 | Nyilvántartási szám: 53314194">
 
-<label>Állat fajtája</label>
+<label>Állat adatai</label>
 <select id="allatFajta">
+  <option value="">Válasszon</option>
   <option>Kutya</option>
   <option>Macska</option>
   <option>Egyéb</option>
 </select>
 
+<div id="egyebAllat" style="display:none;">
+  <label>Milyen állat?</label>
+  <input type="text">
+</div>
+
 <div class="row">
   <div>
-    <label>Állat neve</label>
-    <input>
+    <label>Név</label>
+    <input type="text">
   </div>
   <div>
     <label>Chip szám</label>
-    <input>
+    <input type="text">
   </div>
 </div>
 
@@ -149,26 +165,34 @@ button {
   </div>
 </div>
 
-<label>Implantátum az állat testében?</label>
-<table class="checkbox-table">
-<tr><td>Igen</td><td><input type="checkbox"></td></tr>
-<tr><td>Nem</td><td><input type="checkbox"></td></tr>
-</table>
+<label>Található-e implantátum (chipen kívül, fém, orvosi eszköz)?</label>
+<div class="checkbox">
+  <span>Igen</span>
+  <input type="checkbox" class="implant">
+</div>
+<div class="checkbox">
+  <span>Nem</span>
+  <input type="checkbox" class="implant">
+</div>
 
-<label>Urna típusa</label>
-<input>
+<label>Milyen urna?</label>
+<input type="text">
 
 <label>Urna állapota</label>
 <select>
-<option>Ragasztva</option>
-<option>Nem ragasztva</option>
+  <option>Ragasztva</option>
+  <option>Nem ragasztva</option>
 </select>
 
 <label>Fizetés módja</label>
-<table class="checkbox-table">
-<tr><td>Készpénz</td><td><input type="checkbox"></td></tr>
-<tr><td>Átutalás (egy összegben)</td><td><input type="checkbox"></td></tr>
-</table>
+<div class="checkbox">
+  <span>Készpénz</span>
+  <input type="checkbox">
+</div>
+<div class="checkbox">
+  <span>Átutalás (egy összegben)</span>
+  <input type="checkbox">
+</div>
 
 <label>Elszállításnál fizetett összeg (Ft)</label>
 <input type="number">
@@ -176,67 +200,96 @@ button {
 <label>Visszaszállításnál fizetendő összeg (Ft)</label>
 <input type="number">
 
-<table class="checkbox-table">
-<tr>
-<td>A kisállattal együtt átvett pokróc, nyakörv stb. megsemmisítésre kerül.</td>
-<td><input type="checkbox"></td>
-</tr>
-<tr>
-<td>Hozzájárulok személyes adataim kezeléséhez</td>
-<td><input type="checkbox"></td>
-</tr>
-</table>
+<div class="checkbox">
+  <span>A kisállattal együtt átvett pokróc, nyakörv stb. megsemmisítésre kerül.</span>
+  <input type="checkbox">
+</div>
+
+<div class="checkbox">
+  <span>Hozzájárulok személyes adataim kezeléséhez</span>
+  <input type="checkbox" required>
+</div>
+
+<label>Hol találta hirdetésünket?</label>
+<input type="text">
 
 <label>Megjegyzés</label>
 <textarea></textarea>
 
 <label>Megbízó aláírása</label>
-<canvas id="sign"></canvas>
+<canvas id="signUser"></canvas>
 
 <label>Ügyfél email címe</label>
-<input id="ugyfelEmail" type="email">
+<input type="email" id="ugyfelEmail" required>
 
 <button id="pdfBtn">PDF készítés és küldés</button>
 
 </div>
 
 <script>
-// dátum
-const d=new Date();
-const ds=`${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}-${String(d.getDate()).padStart(2,'0')}`;
-datum.innerText=ds.replaceAll("-", ".");
-let c=localStorage.getItem("erk")||0;
-localStorage.setItem("erk",++c);
-erkszam.innerText=`${ds}-${String(c).padStart(4,"0")}`;
+const d = new Date();
+const ds = `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}-${String(d.getDate()).padStart(2,'0')}`;
+datum.innerText = ds.replaceAll("-", ".");
+let c = localStorage.getItem("erk") || 0;
+localStorage.setItem("erk", ++c);
+erkszam.innerText = `${ds}-${String(c).padStart(4,"0")}`;
 
-// aláírás
-const canvas=document.getElementById("sign");
-const ctx=canvas.getContext("2d");
-canvas.width=canvas.offsetWidth;
-canvas.height=150;
+allatFajta.onchange = e => egyebAllat.style.display = e.target.value==="Egyéb" ? "block" : "none";
+
+document.querySelectorAll(".implant").forEach(cb=>{
+  cb.onchange = ()=>document.querySelectorAll(".implant").forEach(o=>{
+    if(o!==cb) o.checked=false;
+  });
+});
+
+const canvas = document.getElementById("signUser");
+const ctx = canvas.getContext("2d");
+canvas.width = canvas.offsetWidth;
+canvas.height = 150;
 let draw=false;
 
-canvas.onmousedown=e=>{draw=true;ctx.beginPath();ctx.moveTo(e.offsetX,e.offsetY);}
-canvas.onmousemove=e=>{if(draw){ctx.lineTo(e.offsetX,e.offsetY);ctx.stroke();}}
-canvas.onmouseup=()=>draw=false;
+function pos(e){
+  const r=canvas.getBoundingClientRect();
+  return e.touches
+    ? {x:e.touches[0].clientX-r.left,y:e.touches[0].clientY-r.top}
+    : {x:e.clientX-r.left,y:e.clientY-r.top};
+}
 
-// pdf
-pdfBtn.onclick=async()=>{
-if(!ugyfelEmail.value)return alert("Email kötelező");
+["mousedown","touchstart"].forEach(ev=>canvas.addEventListener(ev,e=>{
+  draw=true; const p=pos(e); ctx.beginPath(); ctx.moveTo(p.x,p.y);
+}));
+["mousemove","touchmove"].forEach(ev=>canvas.addEventListener(ev,e=>{
+  if(!draw)return; const p=pos(e);
+  ctx.lineWidth=2; ctx.lineCap="round";
+  ctx.lineTo(p.x,p.y); ctx.stroke();
+}));
+["mouseup","touchend","mouseleave"].forEach(ev=>canvas.addEventListener(ev,()=>{
+  draw=false; ctx.beginPath();
+}));
 
-const fileName=`azonosito_${ds}_${cim.value.replace(/\s+/g,"_")}.pdf`;
+function clean(str){
+  return str.normalize("NFD").replace(/[\u0300-\u036f]/g,"").replace(/[^a-z0-9]+/gi,"_");
+}
 
-const pdfBlob=await html2pdf().from(doc).set({
-html2canvas:{scale:1,width:794,windowWidth:794},
-jsPDF:{unit:"mm",format:"a4"}
-}).outputPdf("blob");
+pdfBtn.onclick = async () => {
+  if(!ugyfelEmail.value) return alert("Email kötelező");
 
-const fd=new FormData();
-fd.append("pdf",pdfBlob,fileName);
-fd.append("ugyfelEmail",ugyfelEmail.value);
+  const fileName = `${ds}_${clean(cim.value || "cim_nelkul")}.pdf`;
 
-await fetch("/send-pdf",{method:"POST",body:fd});
-alert("PDF elküldve");
+  const pdfBlob = await html2pdf().from(doc).set({
+    margin:10,
+    html2canvas:{ scale: window.innerWidth<768?0.65:0.85 },
+    jsPDF:{ unit:"mm", format:"a4", orientation:"portrait" }
+  }).outputPdf("blob");
+
+  const fd = new FormData();
+  fd.append("pdf", pdfBlob, fileName);
+  fd.append("ugyfelEmail", ugyfelEmail.value);
+  fd.append("gazdaNev", gazdaNev.value);
+  fd.append("cim", cim.value);
+
+  await fetch("/send-pdf",{ method:"POST", body:fd });
+  alert("PDF elküldve");
 };
 </script>
 
