--- a/index.html
+++ b/index.html
@@ -214,17 +214,17 @@ value="Budai Tamás e.v. | Adószám: 69528279-1-43 | Nyilvántartási szám: 53
 <script>
 /* dátum + érkeztetés */
 const d = new Date();
-const ds = `${d.getFullYear()}.${String(d.getMonth()+1).padStart(2,'0')}.${String(d.getDate()).padStart(2,'0')}`;
-datum.innerText = ds;
+const ds = `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}-${String(d.getDate()).padStart(2,'0')}`;
+datum.innerText = ds.replaceAll("-", ".");
 let c = localStorage.getItem("erk") || 0;
 localStorage.setItem("erk", ++c);
-erkszam.innerText = `${ds.replaceAll('.','-')}-${String(c).padStart(4,"0")}`;
+erkszam.innerText = `${ds}-${String(c).padStart(4,"0")}`;
 
 /* egyéb állat */
 allatFajta.onchange = e =>
   egyebAllat.style.display = e.target.value==="Egyéb" ? "block" : "none";
 
-/* implant checkbox kizárás */
+/* implant kizárás */
 document.querySelectorAll(".implant").forEach(cb=>{
   cb.onchange = ()=>document.querySelectorAll(".implant").forEach(o=>{
     if(o!==cb) o.checked=false;
@@ -257,56 +257,38 @@ function pos(e){
   draw=false; ctx.beginPath();
 }));
 
-/* flatten PDF-hez */
-function flattenForPdf(source){
-  const clone = source.cloneNode(true);
-
-  clone.querySelectorAll("input, textarea, select").forEach(el=>{
-    let val="";
-    if(el.type==="checkbox") val = el.checked ? "☑" : "☐";
-    else if(el.tagName==="SELECT") val = el.options[el.selectedIndex]?.text || "";
-    else val = el.value || "";
-
-    const div=document.createElement("div");
-    div.style.border="1px solid #999";
-    div.style.minHeight="38px";
-    div.style.padding="8px";
-    div.innerText=val;
-
-    el.replaceWith(div);
-  });
-
-  clone.querySelectorAll("canvas").forEach(c=>{
-    const img=document.createElement("img");
-    img.src=c.toDataURL();
-    img.style.width="100%";
-    img.style.height="150px";
-    img.style.border="1px solid #000";
-    c.replaceWith(img);
-  });
-
-  return clone;
+function clean(str){
+  return str.normalize("NFD")
+    .replace(/[\u0300-\u036f]/g,"")
+    .replace(/[^a-z0-9]+/gi,"_");
 }
 
-/* PDF + email */
-pdfBtn.onclick = async ()=>{
+/* PDF + EMAIL – BACKENDDEL KOMPATIBILIS */
+pdfBtn.onclick = async () => {
   if(!ugyfelEmail.value) return alert("Email kötelező");
 
-  const flat = flattenForPdf(document.getElementById("doc"));
+  const fileName = `${ds}_${clean(cim.value || "cim_nelkul")}.pdf`;
 
-  const pdfBlob = await html2pdf().from(flat).set({
+  const pdfBlob = await html2pdf().from(doc).set({
     margin:10,
     image:{type:'jpeg',quality:0.95},
-    html2canvas:{scale:1.5},
-    jsPDF:{unit:'mm',format:'a4',orientation:'portrait'}
+    html2canvas:{scale:1.3},
+    jsPDF:{unit:'mm',format:'a4',orientation:'portrait'},
+    pagebreak:{mode:['css','legacy']}
   }).outputPdf("blob");
 
-  const fd=new FormData();
-  fd.append("pdf",pdfBlob,"azonosito_lap.pdf");
-  fd.append("email",ugyfelEmail.value);
+  const fd = new FormData();
+  fd.append("pdf", pdfBlob, fileName);
+  fd.append("ugyfelEmail", ugyfelEmail.value);
+  fd.append("gazdaNev", gazdaNev.value);
+  fd.append("cim", cim.value);
 
-  await fetch("/send-pdf",{method:"POST",body:fd});
-  alert("PDF elküldve");
+  await fetch("/send-pdf", {
+    method: "POST",
+    body: fd
+  });
+
+  alert("PDF elküldve emailben");
 };
 </script>
 
