--- a/index.html
+++ b/index.html
@@ -162,9 +162,159 @@ value="Budai Tamás e.v. | Adószám: 69528279-1-43 | Nyilvántartási szám: 53
   </div>
 </div>
 
-<!-- A HTML TOVÁBBI RÉSZE VÁLTOZATLAN -->
-<!-- (aláírás, email küldés, PDF, stb. ugyanaz) -->
+<label>Található-e implantátum (chipen kívül, fém, orvosi eszköz)?</label>
+<div class="checkbox"><span>Igen</span><input type="checkbox" class="implant"></div>
+<div class="checkbox"><span>Nem</span><input type="checkbox" class="implant"></div>
+
+<label>Milyen urna?</label>
+<input type="text">
+
+<label>Urna állapota</label>
+<select>
+  <option>Ragasztva</option>
+  <option>Nem ragasztva</option>
+</select>
+
+<label>Fizetés módja</label>
+<div class="checkbox"><span>Készpénz</span><input type="checkbox"></div>
+<div class="checkbox"><span>Átutalás (egy összegben)</span><input type="checkbox"></div>
+
+<label>Elszállításnál fizetett összeg (Ft)</label>
+<input type="number">
+
+<label>Visszaszállításnál fizetendő összeg (Ft)</label>
+<input type="number">
+
+<div class="checkbox">
+  <span>A kisállattal együtt átvett pokróc, nyakörv stb. megsemmisítésre kerül.</span>
+  <input type="checkbox">
+</div>
+
+<div class="checkbox">
+  <span>Hozzájárulok személyes adataim kezeléséhez</span>
+  <input type="checkbox">
+</div>
+
+<label>Hol találta hirdetésünket?</label>
+<input type="text">
+
+<label>Megjegyzés</label>
+<textarea></textarea>
+
+<label>Megbízó aláírása</label>
+<canvas id="signUser"></canvas>
+
+<label>Ügyfél email címe</label>
+<input type="email" id="ugyfelEmail">
+
+<button id="pdfBtn">PDF készítés és küldés</button>
 
 </div>
+
+<script>
+/* dátum + érkeztetés */
+const d = new Date();
+const ds = `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}-${String(d.getDate()).padStart(2,'0')}`;
+datum.innerText = ds.replaceAll("-", ".");
+let c = localStorage.getItem("erk") || 0;
+localStorage.setItem("erk", ++c);
+erkszam.innerText = `${ds}-${String(c).padStart(4,"0")}`;
+
+/* egyéb állat */
+allatFajta.onchange = e =>
+  egyebAllat.style.display = e.target.value==="Egyéb" ? "block" : "none";
+
+/* implant kizárás */
+document.querySelectorAll(".implant").forEach(cb=>{
+  cb.onchange = ()=>document.querySelectorAll(".implant").forEach(o=>{
+    if(o!==cb) o.checked=false;
+  });
+});
+
+/* aláírás */
+const canvas = document.getElementById("signUser");
+const ctx = canvas.getContext("2d");
+canvas.width = canvas.offsetWidth;
+canvas.height = 150;
+let draw=false;
+
+function pos(e){
+  const r=canvas.getBoundingClientRect();
+  return e.touches
+    ? {x:e.touches[0].clientX-r.left,y:e.touches[0].clientY-r.top}
+    : {x:e.clientX-r.left,y:e.clientY-r.top};
+}
+
+["mousedown","touchstart"].forEach(ev=>canvas.addEventListener(ev,e=>{
+  draw=true; const p=pos(e); ctx.beginPath(); ctx.moveTo(p.x,p.y);
+}));
+["mousemove","touchmove"].forEach(ev=>canvas.addEventListener(ev,e=>{
+  if(!draw)return; const p=pos(e);
+  ctx.lineWidth=2; ctx.lineCap="round";
+  ctx.lineTo(p.x,p.y); ctx.stroke();
+}));
+["mouseup","touchend","mouseleave"].forEach(ev=>canvas.addEventListener(ev,()=>{
+  draw=false; ctx.beginPath();
+}));
+
+function clean(str){
+  return str.normalize("NFD")
+    .replace(/[\u0300-\u036f]/g,"")
+    .replace(/[^a-z0-9]+/gi,"_");
+}
+
+/* EMAIL HTML */
+function generateEmailHTML() {
+  const clone = document.getElementById("doc").cloneNode(true);
+
+  clone.querySelectorAll("input, textarea, select").forEach(el => {
+    let value = "";
+    if (el.type === "checkbox") {
+      value = el.checked ? "☑ Igen" : "☐ Nem";
+    } else {
+      value = el.value || "";
+    }
+    const span = document.createElement("span");
+    span.innerText = value;
+    span.style.fontWeight = "bold";
+    el.replaceWith(span);
+  });
+
+  const c = document.getElementById("signUser");
+  if (c) {
+    const img = document.createElement("img");
+    img.src = c.toDataURL("image/png");
+    img.style.maxWidth = "300px";
+    clone.querySelector("#signUser").replaceWith(img);
+  }
+
+  return `<html><body>${clone.outerHTML}</body></html>`;
+}
+
+/* PDF + EMAIL */
+pdfBtn.onclick = async () => {
+  if (!ugyfelEmail.value) return alert("Email kötelező");
+
+  const emailHTML = generateEmailHTML();
+  const fileName = `${ds}_${clean(cim.value || "cim_nelkul")}.pdf`;
+
+  const pdfBlob = await html2pdf().from(doc).set({
+    margin:10,
+    image:{type:'jpeg',quality:0.95},
+    html2canvas:{scale:1.3},
+    jsPDF:{unit:'mm',format:'a4',orientation:'portrait'}
+  }).outputPdf("blob");
+
+  const fd = new FormData();
+  fd.append("pdf", pdfBlob, fileName);
+  fd.append("ugyfelEmail", ugyfelEmail.value);
+  fd.append("email_html", emailHTML);
+
+  await fetch("/send-pdf", { method:"POST", body:fd });
+
+  alert("PDF elküldve emailben");
+};
+</script>
+
 </body>
 </html>
