--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@ button {
   font-size: 16px;
   cursor: pointer;
 }
+
+/* ===== PDF TÖRDELÉS JAVÍTÁS – TARTALOM NEM VÁLTOZIK ===== */
+@media print {
+  #doc {
+    page-break-inside: avoid;
+  }
+}
 </style>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
@@ -263,54 +270,32 @@ function clean(str){
     .replace(/[^a-z0-9]+/gi,"_");
 }
 
-/* EMAIL HTML */
-function generateEmailHTML() {
-  const clone = document.getElementById("doc").cloneNode(true);
-
-  clone.querySelectorAll("input, textarea, select").forEach(el => {
-    let value = "";
-    if (el.type === "checkbox") {
-      value = el.checked ? "☑ Igen" : "☐ Nem";
-    } else {
-      value = el.value || "";
-    }
-    const span = document.createElement("span");
-    span.innerText = value;
-    span.style.fontWeight = "bold";
-    el.replaceWith(span);
-  });
-
-  const c = document.getElementById("signUser");
-  if (c) {
-    const img = document.createElement("img");
-    img.src = c.toDataURL("image/png");
-    img.style.maxWidth = "300px";
-    clone.querySelector("#signUser").replaceWith(img);
-  }
-
-  return `<html><body>${clone.outerHTML}</body></html>`;
-}
-
-/* PDF + EMAIL */
+/* ===== PDF GENERÁLÁS – JAVÍTOTT TÖRDELÉS ===== */
 pdfBtn.onclick = async () => {
   if (!ugyfelEmail.value) return alert("Email kötelező");
 
-  const emailHTML = generateEmailHTML();
   const fileName = `${ds}_${clean(cim.value || "cim_nelkul")}.pdf`;
 
   const pdfBlob = await html2pdf().from(doc).set({
-    margin:10,
-    image:{type:'jpeg',quality:0.95},
-    html2canvas:{scale:1.3},
-    jsPDF:{unit:'mm',format:'a4',orientation:'portrait'}
+    margin: [10,10,10,10],
+    image: { type: "jpeg", quality: 0.98 },
+    html2canvas: {
+      scale: 2,
+      scrollY: 0,
+      useCORS: true
+    },
+    jsPDF: {
+      unit: "mm",
+      format: "a4",
+      orientation: "portrait"
+    }
   }).outputPdf("blob");
 
   const fd = new FormData();
   fd.append("pdf", pdfBlob, fileName);
   fd.append("ugyfelEmail", ugyfelEmail.value);
-  fd.append("email_html", emailHTML);
 
-  await fetch("/send-pdf", { method:"POST", body:fd });
+  await fetch("/send-pdf", { method: "POST", body: fd });
 
   alert("PDF elküldve emailben");
 };
